# singler_classic_markers

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  annotated.html  blocked_8hpp_source.html  choose_8hpp.html  choose_8hpp_source.html  classes.html  dir_8377bc915a0fb8684a2b896dfce3e610.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  graph_legend.html  index.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacesingler__classic__markers.html  number_8hpp_source.html  singlepp.tag  singler__classic__markers_8hpp.html  singler__classic__markers_8hpp_source.html  structsingler__classic__markers_1_1ChooseBlockedOptions-members.html  structsingler__classic__markers_1_1ChooseBlockedOptions.html  structsingler__classic__markers_1_1ChooseOptions-members.html  structsingler__classic__markers_1_1ChooseOptions.html
docs/search/: all_11.js  all_2.js  all_3.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_2.js  files_2.js  files_c.js  functions_2.js  functions_3.js  functions_b.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  searchdata.js  variables_3.js  variables_7.js
include/singler_classic_markers/: blocked.hpp  choose.hpp  number.hpp  queue.hpp  scan.hpp  singler_classic_markers.hpp  utils.hpp
tests/: CMakeLists.txt
tests/src/: blocked.cpp  choose.cpp  number.cpp  spawn_matrix.h  utils.h
